    * mysql.innodb_io: New check for Disk-IO of InnoDB
    * mysql_capacity: New check for used/free capacity of MySQL databases
    * postgres_sessions: New check for PostgreSQL number of sessions
    * postgres_stat_database: New check for PostgreSQL database statistics
    * postgres_stat_database.size: New check for PostgreSQL database size

1.2.0b6:
    Multisite:
    * FIX: Fixed layout of some dropdown fields in view filters
    * Make heading in each page clickable -> reload page
    * FIX: Edit view: couldn't edit filter settings
    * FIX: Fixed styling of links in multisite context help
    * FIX: Fixed "select all" button for IE
    * FIX: Context links added by hooks are now hidden by the display
           option "B" again
    * FIX: preselected "refresh" option did not reflect view settings
           but was simply the first available option - usually 30.
    * FIX: fixed exception with custom views created by normal users

    WATO:
    * FIX: Fixed "select all" button in hosts & folders for IE
    * Optically mark modified variables in global settings
    * Swapped icons for rule match and previous rule match (makes for sense)

    Core:
    * FIX: Fixed "make_utf is not defined" error when having custom
           timeperiods defined in WATO

    Checks & Agents: 
    * MacOS X: Agent for MacOS (Thanks to Christian Zigotzky)
    * AIX: New check aix_multipath: Supports checking native AIX multipathing from AIX 5.2 onward
    * Solaris: New check solaris_multipath: Supports checking native Solaris multipath from Solaris10 and up.
    * Solaris: The ZFS Zpool status check now looks more closely at the reported messages. (It's also tested to work on Linux now)

1.2.0b5:
    Core:
    * FIX: handle UTF-8 encoded binary strings correctly (e.g. in host alias)
    * FIX: fix configuration of passive checks via custom_checks
    * Added NOTIFICATIONTYPE to host/service mail bodies

    WATO: