@@ -11,6 +11,8 @@
     * postgres_sessions: New check for PostgreSQL number of sessions
     * postgres_stat_database: New check for PostgreSQL database statistics
     * postgres_stat_database.size: New check for PostgreSQL database size
+    * FIX: hpux_if: convert_to_hex was missing on non-SNMP-hosts -replace
+      with inline implementation
 
 1.2.0b6:
     Multisite:
